nambah h3 di coba.html dan nambah file baru coba.js

--- a/coba.html
+++ b/coba.html
@@ -8,5 +8,8 @@
 <bo>
     <hs></hs>
     <h3>hahahahah</h3>
+    <h3>hahahahah</h3>
+    <h3>hahahahah</h3>
+    <h3>hahahahah</h3>
 </body>
 </html>
